<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Add">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:layout_marginTop="30dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textViewa6"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/for_edit_text"
        android:hint="@string/enter_amount"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/currency"
        />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"

        android:background="@drawable/for_edit_text"
        android:hint="@string/enter_currency"

        android:ems="10"
        android:inputType="text"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="340dp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/for_edit_text"
        android:hint="@string/enter_category"
        android:padding="10dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="340dp"
        android:layout_marginTop="20dp"

        android:layout_height="wrap_content"
        android:text="@string/remark" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/for_edit_text"
        android:hint="@string/enter_remark"
        android:padding="10dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"/>


</LinearLayout>