<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:drawableLeftCompat="@drawable/back_arrow"

        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="46sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/email"
        android:textColor="@color/black"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/for_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"

        android:paddingStart="25dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#5D5D5D" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="5dp"
        android:text="@string/password"
        android:textColor="@color/black"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/for_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"

        android:paddingStart="25dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#5D5D5D" />



    <Button
        android:id="@+id/SignUp_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:text="@string/sign_up"

        android:textColor="#FFFFFF" />

</LinearLayout>