<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".fragment.ViewFrag">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#E2EAF4">

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:backgroundTint="#060270"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textSize="12dp"
            android:text="@string/log_out" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="36dp"
        android:textStyle="bold"
        android:text="@string/expense_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="380dp"
        android:layout_height="480dp"
        android:layout_marginTop="20dp"
        />
</LinearLayout>